--- a/journal.tex
+++ b/journal.tex
@@ -7,6 +7,7 @@
 \usepackage{ulem}
 \usepackage{tikz}
 \usepackage{pgffor, ifthen}
+\usepackage[geometry]{ifsym}
 
 % Define colors
 \definecolor{darkgray}{RGB}{50,50,50}
@@ -31,10 +32,8 @@
             {\textcolor{lightgray}{\rule{#3}{0.5pt}}\\}
             {\textcolor{lightgray}{\rule{#3}{0.5pt}\vspace{#1}}\\}
         }
-   \vspace{-1.5em} 
+   \vspace{-1.8em} 
 }
-
-%\textcolor{lightgray}{\rule{\textwidth}{0.4pt}} \\
 
 \begin{document}
 
@@ -60,11 +59,11 @@
 
 % Three Main Tasks
 \section*{Tâches principales}
-\begin{enumerate}[label=\textbf{\arabic*.}, leftmargin=0.8cm]
+\begin{itemize}[label={\textcolor{darkgray}{\Square}}, leftmargin=0.5cm, labelsep=0.3cm]
     \item \underline{\hspace{5.5cm}}
     \item \underline{\hspace{5.5cm}}
     \item \underline{\hspace{5.5cm}}
-\end{enumerate}
+\end{itemize}
 
 \vfill
 
@@ -84,6 +83,5 @@
 \section*{Lecture du jour}
 \paragraph{Verset en or :}  \notes[\lineSpacing]{2}{\textwidth}
 \paragraph{Réflexions :} \notes[\lineSpacing]{3}{\textwidth}
-
 
 \end{document}
